--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Aaron's Calculator</title>
-    <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="main.css" />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+      integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+      crossorigin="anonymous"
+    />
   </head>
 
   <body>
@@ -22,123 +24,136 @@
               <span id="steps">0</span>
             </div>
             <!--DISPLAY END -->
-          </div><br><br>
+          </div>
+          <br /><br />
 
           <!--BUTTONS START -->
-          <div id='buttons'>
+          <div id="buttons">
             <!--clear buttons, multiply and divide -->
             <div class="row">
-              <button class='red col-xs-3' id='ac'>AC</button>
-              <button class='red col-xs-3' id='ce'>CE</button>
-              <button class="col-xs-3" id='/'>&divide;</button>
-              <button class="col-xs-3" id='*'>x</button>
+              <button class="red col-xs-3" id="ac">AC</button>
+              <button class="red col-xs-3" id="ce">CE</button>
+              <button class="col-xs-3" id="/">&divide;</button>
+              <button class="col-xs-3" id="*">x</button>
             </div>
             <!--buttons 7-9 and subtract -->
             <div class="row">
-              <button class="col-xs-3" id='7'>7</button>
-              <button class="col-xs-3" id='8'>8</button>
-              <button class="col-xs-3" id='9'>9</button>
-              <button class="col-xs-3" id='-'>-</button>
+              <button class="col-xs-3" id="7">7</button>
+              <button class="col-xs-3" id="8">8</button>
+              <button class="col-xs-3" id="9">9</button>
+              <button class="col-xs-3" id="-">-</button>
             </div>
             <!--buttons 4-6 and add -->
             <div class="row">
-              <button class="col-xs-3" id='4'>4</button>
-              <button class="col-xs-3" id='5'>5</button>
-              <button class="col-xs-3" id='6'>6</button>
-              <button class="col-xs-3" id='+'>+</button>
+              <button class="col-xs-3" id="4">4</button>
+              <button class="col-xs-3" id="5">5</button>
+              <button class="col-xs-3" id="6">6</button>
+              <button class="col-xs-3" id="+">+</button>
             </div>
             <!--buttons 1-3 -->
             <div class="row">
-              <button class="col-xs-3" id='1'>1</button>
-              <button class="col-xs-3" id='2'>2</button>
-              <button class="col-xs-3" id='3'>3</button>
+              <button class="col-xs-3" id="1">1</button>
+              <button class="col-xs-3" id="2">2</button>
+              <button class="col-xs-3" id="3">3</button>
             </div>
             <!--buttons 0, decimal, and equals -->
             <div class="row">
-              <button id='0' class="col-xs-6">0</button>
-              <button class="col-xs-3" id='.'>.</button>
-              <button id='equalButton' class="col-xs-3">=</button>
+              <button id="0" class="col-xs-6">0</button>
+              <button class="col-xs-3" id=".">.</button>
+              <button id="equalButton" class="col-xs-3">=</button>
             </div>
-        </div>
-        <!--BUTTONS END -->
+          </div>
+          <!--BUTTONS END -->
         </div>
       </div>
     </main>
   </body>
+  <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </html>
 
 <script>
   $(document).ready(function() {
     //stores inputs from user into an array
-    var inputs = [""];
+    var inputs = [''];
     //String to store current input string
     var totalString;
     //Validation array for normal arithmetic operators
-    var operators1 = ["+", "-", "/", "*"];
+    var operators1 = ['+', '-', '/', '*'];
     //Validation array for decimals
-    var operators2 = ["."];
+    var operators2 = ['.'];
     //numbers for validation
-    var nums = [0,1,2,3,4,5,6,7,8,9];
+    var nums = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9];
     //counts decimals to prevent repition
     var decCount = 0;
 
-    $("button").on("click", function() {
-      if (this.id === "ac") {
-        inputs = [""];
-        decCount=0;
+    $('button').on('click', function() {
+      if (this.id === 'ac') {
+        inputs = [''];
+        decCount = 0;
         update();
-        $("#steps").html("0");
-      }
-      else if (this.id === "ce") {
+        $('#steps').html('0');
+      } else if (this.id === 'ce') {
         inputs.pop();
         update();
-      }
-      else if (this.id === "equalButton") {
+      } else if (this.id === 'equalButton') {
         getTotal();
-      }
-      else {
-        if (inputs[inputs.length-1].indexOf("+","-","/","*",".") === -1) {
+      } else {
+        if (inputs[inputs.length - 1].indexOf('+', '-', '/', '*', '.') === -1) {
           getValue(this.id);
-        }
-        else {
+        } else {
           getValue(this.id);
         }
       }
     });
 
     function getValue(input) {
-      if (operators2.includes(inputs[inputs.length-1])===true && input === "."){ //checks if last & current input are a '.'
+      if (
+        operators2.includes(inputs[inputs.length - 1]) === true &&
+        input === '.'
+      ) {
+        //checks if last & current input are a '.'
         alert("Duplicate '.' ");
-      }
-      else if (operators1.includes(inputs[inputs.length-1])===true && operators1.includes(input)) { //checks if last & current input are a +,-,/,*
-        alert("Duplicate operator");
-      }
-      else if (inputs.length===1 && operators1.includes(input)===true){ //stops user from starting with +,-,/,*
-        $("#steps").html("You can't start with an operator!")
+      } else if (
+        operators1.includes(inputs[inputs.length - 1]) === true &&
+        operators1.includes(input)
+      ) {
+        //checks if last & current input are a +,-,/,*
+        alert('Duplicate operator');
+      } else if (inputs.length === 1 && operators1.includes(input) === true) {
+        //stops user from starting with +,-,/,*
+        $('#steps').html("You can't start with an operator!");
         return;
-      }
-      else if (inputs.length===1 && operators1.includes(input)===false){ // pushes first input if not +,-,/,*
-        if (operators2.includes(input)) { //if input in decimal,increments decimal count
+      } else if (inputs.length === 1 && operators1.includes(input) === false) {
+        // pushes first input if not +,-,/,*
+        if (operators2.includes(input)) {
+          //if input in decimal,increments decimal count
           decCount++;
         }
         if (decCount <= 1) {
           inputs.push(input);
         }
-      }
-      else if (operators2.includes(input)) { //if input in decimal, pushes input and increments decimal count
+      } else if (operators2.includes(input)) {
+        //if input in decimal, pushes input and increments decimal count
         decCount++;
         if (decCount <= 1) {
           inputs.push(input);
         }
-      }
-      else if (operators1.includes(inputs[inputs.length-1])===false && operators1.includes(input) === false) { //if last value is not +,-,/,* and neither is current, push input
+      } else if (
+        operators1.includes(inputs[inputs.length - 1]) === false &&
+        operators1.includes(input) === false
+      ) {
+        //if last value is not +,-,/,* and neither is current, push input
         inputs.push(input);
-      }
-      else if (operators1.includes(inputs[inputs.length-1])===false && operators1.includes(input) === true) { //if last value is not +,-,/,* but current is, push input
+      } else if (
+        operators1.includes(inputs[inputs.length - 1]) === false &&
+        operators1.includes(input) === true
+      ) {
+        //if last value is not +,-,/,* but current is, push input
         inputs.push(input);
         decCount = 0;
-      }
-      else if (nums.includes(Number(input))){ //if value of input is in nums, push input
+      } else if (nums.includes(Number(input))) {
+        //if value of input is in nums, push input
         inputs.push(input);
       }
       update();
@@ -147,24 +162,22 @@
       if (decCount > 1) {
         alert("Duplicate '.' ");
         return;
-      }
-      else {
-        totalString = inputs.join("");
+      } else {
+        totalString = inputs.join('');
         if (inputs.length === 0) {
-          inputs = [""];
-          $("#steps").html("0");
+          inputs = [''];
+          $('#steps').html('0');
         } else {
-          $("#steps").html(totalString);
+          $('#steps').html(totalString);
         }
       }
       console.log(decCount);
     }
     function getTotal() {
-      totalString = inputs.join("");
+      totalString = inputs.join('');
       var tot = eval(totalString);
-      $("#steps").html(eval(tot));
-      inputs = ["", tot.toString()];
+      $('#steps').html(eval(tot));
+      inputs = ['', tot.toString()];
     }
-
   });
 </script>
