--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <body>
     <main>
-      <div class="calc-background text-center">
+      <div id="calculator" class="calc-background text-center">
         <div class="container-fluid">
           <div class="row">
             <!--DISPLAY START -->
@@ -60,7 +60,7 @@
             <div class="row">
               <button id="0" class="col-xs-6">0</button>
               <button class="col-xs-3" id=".">.</button>
-              <button id="equalButton" class="col-xs-3">=</button>
+              <button id="equals" class="col-xs-3">=</button>
             </div>
           </div>
           <!--BUTTONS END -->
