--- a/index.html
+++ b/index.html
@@ -38,27 +38,27 @@
             </div>
             <!--buttons 7-9 and subtract -->
             <div class="row">
-              <button class="col-xs-3" id="7">7</button>
-              <button class="col-xs-3" id="8">8</button>
-              <button class="col-xs-3" id="9">9</button>
+              <button class="col-xs-3" id="seven">7</button>
+              <button class="col-xs-3" id="eight">8</button>
+              <button class="col-xs-3" id="nine">9</button>
               <button class="col-xs-3" id="-">-</button>
             </div>
             <!--buttons 4-6 and add -->
             <div class="row">
-              <button class="col-xs-3" id="4">4</button>
-              <button class="col-xs-3" id="5">5</button>
-              <button class="col-xs-3" id="6">6</button>
+              <button class="col-xs-3" id="four">4</button>
+              <button class="col-xs-3" id="five">5</button>
+              <button class="col-xs-3" id="six">6</button>
               <button class="col-xs-3" id="+">+</button>
             </div>
             <!--buttons 1-3 -->
             <div class="row">
-              <button class="col-xs-3" id="1">1</button>
-              <button class="col-xs-3" id="2">2</button>
-              <button class="col-xs-3" id="3">3</button>
+              <button class="col-xs-3" id="one">1</button>
+              <button class="col-xs-3" id="two">2</button>
+              <button class="col-xs-3" id="three">3</button>
             </div>
             <!--buttons 0, decimal, and equals -->
             <div class="row">
-              <button id="0" class="col-xs-6">0</button>
+              <button id="zero" class="col-xs-6">0</button>
               <button class="col-xs-3" id=".">.</button>
               <button id="equals" class="col-xs-3">=</button>
             </div>
