Fixed so test 3 passes

--- a/index.html
+++ b/index.html
@@ -33,22 +33,22 @@
             <div class="row">
               <button class="red col-xs-3" id="ac">AC</button>
               <button class="red col-xs-3" id="ce">CE</button>
-              <button class="col-xs-3" id="/">&divide;</button>
-              <button class="col-xs-3" id="*">x</button>
+              <button class="col-xs-3" id="divide">&divide;</button>
+              <button class="col-xs-3" id="multiply">x</button>
             </div>
             <!--buttons 7-9 and subtract -->
             <div class="row">
               <button class="col-xs-3" id="seven">7</button>
               <button class="col-xs-3" id="eight">8</button>
               <button class="col-xs-3" id="nine">9</button>
-              <button class="col-xs-3" id="-">-</button>
+              <button class="col-xs-3" id="subtract">-</button>
             </div>
             <!--buttons 4-6 and add -->
             <div class="row">
               <button class="col-xs-3" id="four">4</button>
               <button class="col-xs-3" id="five">5</button>
               <button class="col-xs-3" id="six">6</button>
-              <button class="col-xs-3" id="+">+</button>
+              <button class="col-xs-3" id="add">+</button>
             </div>
             <!--buttons 1-3 -->
             <div class="row">
