Fixed so test 4 passes

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <!--buttons 0, decimal, and equals -->
             <div class="row">
               <button id="zero" class="col-xs-6">0</button>
-              <button class="col-xs-3" id=".">.</button>
+              <button class="col-xs-3" id="decimal">.</button>
               <button id="equals" class="col-xs-3">=</button>
             </div>
           </div>
