Fixed so test 5 passes

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <div id="buttons">
             <!--clear buttons, multiply and divide -->
             <div class="row">
-              <button class="red col-xs-3" id="ac">AC</button>
+              <button class="red col-xs-3" id="clear">AC</button>
               <button class="red col-xs-3" id="ce">CE</button>
               <button class="col-xs-3" id="divide">&divide;</button>
               <button class="col-xs-3" id="multiply">x</button>
