Display text on right hand side

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="container-fluid">
           <div class="row">
             <!--DISPLAY START -->
-            <div id="display" class="col-xs-offset-1 text-left">
+            <div id="display" class="col-xs-offset-1 text-right">
               <span id="steps">0</span>
             </div>
             <!--DISPLAY END -->
